Implement blade runner style image enhancer

--- a/src/image-enhancer/dev.pug
+++ b/src/image-enhancer/dev.pug
@@ -1,8 +1,2 @@
 #app
-  image-enhancer(cells="100")
-
-
-//- .image-enhancer
-//-   .image-enhancer__grid
-//-     - for (let i = 0; i < 100; i++)
-//-       div
+  image-enhancer(cells="100", size="300", src="https://source.unsplash.com/random/1200x1200")
