--- a/src/image-enhancer/index.pug
+++ b/src/image-enhancer/index.pug
@@ -10,5 +10,6 @@ html
     block content
       include dev.pug
     script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/vue-styled-components@1.2.2/dist/vue-styled-components.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.9/vue.js")
     script(src="script.js")
