--- a/src/paperboy-animation/style.styl
+++ b/src/paperboy-animation/style.styl
@@ -2,7 +2,7 @@
   box-sizing border-box
 
 body
-  background-color dodgerblue
+  background radial-gradient(dodgerblue, #fafafa)
   display flex
   align-items center
   justify-content center
@@ -188,6 +188,7 @@ $sprocketSize = $size * 0.25
   position relative
   height 100px
   width 100px
+  transform translateX(-50%) scale(1)
 
   &__sprocket
     border-radius 100%
