--- a/src/paperboy-animation/style.styl
+++ b/src/paperboy-animation/style.styl
@@ -28,21 +28,38 @@ $scale = 1
   height $wheelSize
   width $wheelSize
   position relative
+  overflow hidden
 
   &__tyre
     border $tyreWidth solid var(--tyres)
     border-radius 100%
     height 100%
     width 100%
-    z-index 2
+    z-index 3
+    overflow hidden
+    position absolute
+    top 0
+    left 0
+
+  &__spin
+    height 100%
+    width 100%
+    border-radius 100%
+    overflow hidden
     position relative
     animation spin .5s infinite linear
 
   &__rim
     border $rimWidth solid var(--mags)
     border-radius 100%
-    height 100%
-    width 100%
+    height ($size - $tyreWidth)
+    width ($size - $tyreWidth)
+    overflow hidden
+    position absolute
+    top 50%
+    left 50%
+    z-index 1
+    transform translate(-50%, -50%)
 
   &__hub
     height $hubSize
@@ -55,11 +72,12 @@ $scale = 1
     transform translate(-50%, -50%)
 
   &__spokes
-    height 100%
+    height 97%
     width 100%
     position absolute
     top 0
     left 0
+    overflow hidden
 
   &__spoke
     position absolute
@@ -186,13 +204,15 @@ $seattubeLength = $frameSize * 0.5
 
 $sprocketSize = $size * 0.25
 .bike
-  position relative
+  position absolute
+  top 50%
+  left 50%
   height 200px
   width 200px
-  transform translateX(-15%) scale(0.5)
+  transform translate(-60%, -50%) scale(0.65)
 
   @media(min-width 768px)
-    transform translateX(-25%) scale(1)
+    transform translate(-60%, -50%) scale(1)
 
   &__cranks
     position absolute
@@ -328,7 +348,6 @@ $sprocketSize = $size * 0.25
 
 
   &__choice
-    outline 0
     cursor pointer
     height 44px
     width 44px
@@ -383,7 +402,9 @@ input
 
 .instruction
   position absolute
-  bottom 4px
+  bottom 6px
   color white
   font-family 'Arial', sans-serif
   font-size 14px
+  @media(max-width 768px)
+    display none
