--- a/src/paperboy-animation/style.styl
+++ b/src/paperboy-animation/style.styl
@@ -35,18 +35,22 @@ $scale = 1
     border-radius 100%
     height 100%
     width 100%
-    z-index 3
     overflow hidden
     position absolute
     top 0
     left 0
 
   &__spin
-    height 100%
-    width 100%
+    height 80%
+    width 80%
     border-radius 100%
     overflow hidden
     position relative
+    position absolute
+    top 50%
+    left 50%
+    margin-left -40%
+    margin-top -40%
     animation spin .5s infinite linear
 
   &__rim
