--- a/src/pong-loader/style.styl
+++ b/src/pong-loader/style.styl
@@ -1,28 +1,30 @@
+$duration = 4s
+$bg = #87d37c
+$size = 200px
+$line = 2px
+
 *
   box-sizing border-box
+  transition all .5s ease 0s
 
 body
-  background #e74c3c
-  animation disco 15s infinite linear
-
-@keyframes disco
-  0%, 100%
-    background #e74c3c
-  25%
-    background purple
-  50%
-    background yellow
-  75%
-    background blue
+  background $bg
 
 .pong
-  height 300px
-  width 300px
-  background repeating-linear-gradient(180deg, white 0, white 4%, #111 4%, #111 6%, white 6%) 148px 0 / 4px 100% no-repeat, #111
+  background repeating-linear-gradient(180deg, white 0, white 4%, $bg 4%, $bg 6%, white 6%) (($size / 2) - ($line / 2)) 0 / $line 100% no-repeat
+  height $size
   position absolute
-  top 50%
   left 50%
+  top 50%
   transform translate(-50%, -50%)
+  width $size
+
+  @media(min-width 768px)
+    $size = 500px
+    $line = 6px
+    background repeating-linear-gradient(180deg, white 0, white 4%, $bg 4%, $bg 6%, white 6%) (($size / 2) - ($line / 2)) 0 / $line 100% no-repeat
+    height $size
+    width $size
 
   &__ball
     height 5%
@@ -31,19 +33,77 @@ body
     position absolute
     top 50%
     left 50%
-    transform translate(-50%, -50%)
-    animation play 5s infinite linear
+    z-index 2
+    will-change transform
+    animation play $duration infinite linear alternate
 
+  &__paddle
+    height 15%
+    width 5%
+    background #fff
+    position absolute
+    top 50%
+    will-change transform
+    animation-duration $duration
+    animation-direction alternate
+    animation-iteration-count infinite
+    animation-timing-function linear
+
+    &--1
+      animation-name moveOne
+      left 0
+    &--2
+      animation-name moveTwo
+      right 0
+
+
+
+// 850 is the limit width ways and 950 height
+xLimit = 850
+yLimit = 950
+generateRandomPosition(pos)
+  y = math(math(0, 'random') * (yLimit * 2), 'floor')
+  x = xLimit
+  if (pos % 2 == 0)
+    x = -(xLimit)
+  (x (y - yLimit))
+
+generatePositions(amount)
+  positions = (generateRandomPosition(0))
+  for pos in (1..amount)
+    pos = generateRandomPosition(pos)
+    push(positions, pos)
+  (positions)
+
+// Some weirdness here whereby creating a set of lists, the first item in the list isn't a list
+positions = generatePositions(11)
 
 @keyframes play
-  // Start and end point
-  0%, 100%
-    transform translate(-50%, -50%) translate(-900%, 0)
-  // go across and up
-  25%, 75%
-    transform translate(-50%, -50%) translate(900%, -600%)
-  // then back and down
-  50%
-    transform translate(-50%, -50%) translate(-900%, 600%)
+  for keyframe in (0..10)
+    {keyframe * 10%}
+      position = positions[keyframe + 1]
+      if keyframe == 0 || keyframe == 10
+        position = positions[11]
+      transform translate(-50%, -50%) translate(position[0] * 1%, position[1] * 1%)
 
+@keyframes moveOne
+  for keyframe in (0..5)
+    {keyframe * 20%}
+      position = positions[(keyframe * 2) + 1]
+      if keyframe == 0
+        position = positions[11]
+      transform translate(0%, -50%) translate(0%, position[1] * .3%)
 
+@keyframes moveTwo
+  for keyframe in (0..5)
+    p = (keyframe * 20) - 10
+    if (p < 0)
+      p = 0
+    {p * 1%}
+      position = positions[((keyframe * 2) - 1) + 1]
+      if keyframe == 0
+        position = positions[11]
+      transform translate(0%, -50%) translate(0%, position[1] * .3%)
+  100%
+    position = positions[11]
+    transform translate(0%, -50%) translate(0%, position[1] * .3%)
