--- a/src/pong-loader/style.styl
+++ b/src/pong-loader/style.styl
@@ -1,4 +1,4 @@
-$duration = 4s
+$duration = 6s
 $bg = #87d37c
 $size = 200px
 $line = 2px
@@ -88,22 +88,29 @@ positions = generatePositions(11)
 
 @keyframes moveOne
   for keyframe in (0..5)
-    {keyframe * 20%}
-      position = positions[(keyframe * 2) + 1]
-      if keyframe == 0
-        position = positions[11]
-      transform translate(0%, -50%) translate(0%, position[1] * .3%)
+    if (keyframe != 5)
+      {keyframe * 20%}, {(keyframe * 20%) + 10%}
+        position = positions[(keyframe * 2) + 1]
+        if keyframe == 0
+          position = positions[11]
+        transform translate(0%, -50%) translate(0%, position[1] * .3%)
+    else
+      {keyframe * 20%}
+        position = positions[(keyframe * 2) + 1]
+        if keyframe == 0
+          position = positions[11]
+        transform translate(0%, -50%) translate(0%, position[1] * .3%)
 
 @keyframes moveTwo
   for keyframe in (0..5)
-    p = (keyframe * 20) - 10
-    if (p < 0)
-      p = 0
-    {p * 1%}
-      position = positions[((keyframe * 2) - 1) + 1]
-      if keyframe == 0
+    if (keyframe == 0 || keyframe == 5)
+      {((keyframe * 20)) * 1%}
         position = positions[11]
-      transform translate(0%, -50%) translate(0%, position[1] * .3%)
-  100%
-    position = positions[11]
-    transform translate(0%, -50%) translate(0%, position[1] * .3%)
+        transform translate(0%, -50%) translate(0%, position[1] * .3%)
+
+    if (keyframe != 0)
+      {((keyframe * 20)) * 1%}, {((keyframe * 20) - 10) * 1%}
+        position = positions[((keyframe * 2) - 1) + 1]
+        if keyframe == 0
+          position = positions[11]
+        transform translate(0%, -50%) translate(0%, position[1] * .3%)
