--- a/src/emoji-spotlight-reveal/style.styl
+++ b/src/emoji-spotlight-reveal/style.styl
@@ -12,12 +12,13 @@ body
   display flex
   align-items center
   justify-content center
-  overflow hidden
 
 .crowd
   display grid
   grid-template-rows repeat(10, 48px)
   grid-template-columns repeat(20, 54px)
+  max-width 100vw
+  overflow hidden
 
 .spotlight
   position fixed
