--- a/src/css-variable-clip-path-generator/style.styl
+++ b/src/css-variable-clip-path-generator/style.styl
@@ -7,21 +7,93 @@
   --width 300
 
 body
-  background-color rebeccapurple
+  background radial-gradient(circle at 50% 190px, rebeccapurple, #111)
+  background rebeccapurple
+  min-height 100vh
+  overflow-x hidden
+  padding-top 40px
+
+button
+input
+label
+  cursor pointer
+
+button
+  border-radius 1rem
+  border 0
+
+  &[disabled]
+    background grey
+    opacity .25
+
+
+.copy
+  background dodgerblue
+  color white
+  padding 8px 24px
+  font-size 1.25rem
+
+.add-node
+  background rgba(0, 255, 0, 0.5)
+  color white
+  padding 4px 12px
+
+.remove-nodes
+  background rgba(255, 0, 0, 0.5)
+  color white
+  padding 4px 12px
+
+#app
   display flex
   align-items center
-  justify-content center
-  min-height 100vh
+  flex-direction column
 
+.mode-option
+  color #fff
+
+  label
+    display flex
+    flex-direction row
+
+  &:hover
+    .mode-option__radio:after
+      background white
+  &__input
+    opacity 0
+    width 0
+    height 0
+    &:checked
+      & ~ label
+        color green
+        .mode-option__radio
+          border-color green
+          &:after
+            background green
+  &__radio
+    height 20px
+    width 20px
+    border-radius 100%
+    border 2px solid white
+    position relative
+
+    &:after
+      content ''
+      background transparent
+      border-radius 100%
+      height 10px
+      width 10px
+      position absolute
+      left 50%
+      top 50%
+      transform translate(-50%, -50%)
 
 .clip
   height calc((var(--height) + (2 * var(--border))) * 1px)
   width calc((var(--width) + (2 * var(--border))) * 1px)
   border calc(var(--border) * 1px) solid white
-  margin 30px
+  transition all .25s ease 0s
 
   &__container
-    background dodgerblue
     height 100%
     position relative
     width 100%
@@ -32,13 +104,26 @@ body
     position absolute
     top 0
     left 0
-    background red
+    background url(https://placebear.com/300/300)
+    background-size cover
 
   &__path
     color #ffffff
-    position absolute
-    bottom 100%
+    margin 10px
+    max-width 500px
+    text-align center
+
+    & > div
+      margin-bottom 10px
+
+  &__path-value
+    background #111
+    border-radius 6px
     padding 20px
+
+  &__path-input
+    position fixed
+    left 100%
 
   &__node
     --x 0
@@ -51,7 +136,7 @@ body
     width 50px
     left calc(var(--x) * 1px)
     top calc(var(--y) * 1px)
-    opacity 0.5
+    opacity 0.75
     z-index 1
 
 
