Finish implementation of dont feel so good bear

--- a/src/dont-feel-good/style.styl
+++ b/src/dont-feel-good/style.styl
@@ -9,33 +9,71 @@ body
   justify-content center
   min-height 100vh
 
-.dupe
-  background url(https://raw.github.com/jh3y/doodles/master/dontfeelgoodbear.svg?sanitize=true)
-  background-size 300px 400px
-  height 400px
-  width 300px
-
 .bear-grid
+  --height 320
+  --width 240
   display grid
-  height 400px
-  width 300px
   grid-template-rows repeat(var(--rows), 1fr)
   grid-template-columns repeat(var(--columns), 1fr)
+  height calc(var(--height) * 1px)
+  transition height .25s, width .25s
+  width calc(var(--width) * 1px)
+
+  @media(min-width 768px)
+    --height 400
+    --width 300
+
+  &--fading .bear-grid__cell
+    animation-play-state running
+    animation-name driftAway
 
   &__cell
+    --cellWidth calc((calc(var(--width) * -1px)) / var(--columns))
+    --cellHeight calc((calc(var(--height) * -1px)) / var(--rows))
     background url(https://raw.github.com/jh3y/doodles/master/dontfeelgoodbear.svg?sanitize=true)
-    background-size 300px 400px
-    // Each cell has an XY value that maps out the background-position
-    --cellWidth calc(-300px / var(--columns))
-    --cellHeight calc(-400px / var(--rows))
+    background-size calc(var(--width) * 1px) calc(var(--height) * 1px)
     background-position calc(var(--x) * var(--cellWidth)) calc(var(--y) * var(--cellHeight))
-    animation driftAway 4s
-    animation-delay calc(var(--x) * .25s)
+    animation-delay calc(var(--x) * .2s + 1s)
     animation-fill-mode backwards
+    animation-duration 4s
+    animation-play-state paused
     opacity 0
-    transform translate(calc(var(--destinationX) * -1px), calc(var(--destinationY) * -1px)) scale(0)
+    transform translate(calc(var(--destinationX) * -1px), calc(var(--destinationY) * -1px)) rotate(calc(var(--rotation) * 1deg)) scale(0)
+
+.replay
+  animation fadeIn .25s
+  background 0
+  border 0
+  cursor pointer
+  display none
+  height 44px
+  left 50%
+  margin-left -22px
+  margin-top -22px
+  padding 0
+  position fixed
+  top 50%
+  width 44px
+  z-index 2
+
+  &:active
+    transform translateY(5%)
+
+  &--show
+    display block
+
+  &__icon
+    height 44px
+    width 44px
+
+    path
+      fill #fff
+
+@keyframes fadeIn
+  from
+    opacity 0
 
 @keyframes driftAway
   from
-    transform translate(0, 0) scale(1)
+    transform translate(0, 0) rotate(0deg) scale(1)
     opacity 1
