--- a/src/dont-feel-good/dev.pug
+++ b/src/dont-feel-good/dev.pug
@@ -1,6 +1,9 @@
 - let columns = 15
 - let rows = 20
 - let cells = columns * rows
+button.replay
+  svg.replay__icon(viewBox="0 0 24 24")
+    path(d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z")
 .bear-grid(style=`--cells: ${cells}; --columns: ${columns}; --rows: ${rows}`)
   - for(let b = 1; b < cells + 1; b++)
-    .bear-grid__cell(style=`--x: ${(b - 1) % columns}; --y: ${b % columns === 0 ? Math.floor(b / columns) - 1 : Math.floor(b / columns)}; --destinationY: ${Math.floor(Math.random() * 500)}; --destinationX: ${Math.floor(Math.random() * 500)};`)
+    .bear-grid__cell(style=`--x: ${(b - 1) % columns}; --y: ${b % columns === 0 ? Math.floor(b / columns) - 1 : Math.floor(b / columns)}; --destinationY: ${Math.floor(Math.random() * 500)}; --destinationX: ${Math.floor(Math.random() * 500)}; --rotation: ${Math.floor(Math.random() * 360)}`)
