--- a/src/cash-register-superscript/style.styl
+++ b/src/cash-register-superscript/style.styl
@@ -17,18 +17,20 @@ body
   &__total-wrap
     display flex
     justify-content flex-end
-  
+
   &__total
     border 10px solid lighten($color, 45%)
     background black
     display grid
-    grid-template-columns repeat(2, 2.5fr) 1fr repeat(2, 1.5fr)
+    grid-template-columns repeat(2, 2fr) repeat(2, 3fr) 1fr repeat(2, 2fr)
     grid-gap 0
-    width 45%
+    width 50%
     height 50px
 
-    
-  
+  &__loop-track
+    transform translateY(calc(var(--trans) * -100%))
+    transition transform .15s
+
   &__loop
     $font-size = 30px
     background #111
@@ -37,7 +39,7 @@ body
     text-align center
     height $font-size
     line-height $font-size
-    
+
     div
     sup
       height 100%
@@ -49,62 +51,94 @@ body
       top 0
       font-size .75rem
       line-height 1.25rem
-  
-  
-  &__inputs
+
+  $keyHeight = 24px
+  $keyWidth = 30px
+  $keypadPadding = 10px
+
+  &-key
+    $keyColor = #eee
+    background $keyColor
+    border 1px solid darken($keyColor, 25%)
+    box-shadow 0 5px 0 darken($keyColor, 60%)
+    cursor pointer
+    font-size 6px
+    font-weight bold
+    height $keyHeight
+    padding 0
+    text-transform uppercase
+    transform translateY(0)
+    width $keyWidth
+
+    &:active
+      transform translateY(5px)
+      box-shadow 0 0 0 black
+
+    apply-color(c)
+      background c
+      border 1px solid darken(c, 25%)
+      box-shadow 0 5px 0 darken(c, 60%)
+
+    &--top:active
+      transform translateY(15px)
+
+    &--big-dollar
+      apply-color(orange)
+    &--dep
+      apply-color(green)
+    &--sub
+      apply-color(dodgerblue)
+    &--tend
+      apply-color(pink)
+      grid-column 1 / -1
+      width 100%
+
+
+  &__keypad
+    clip-path inset(($keyHeight / 2) 0 0 0)
     display grid
-    position relative
-    grid-template-columns repeat(4, 30px) auto
+    grid-template-columns repeat(4, $keyWidth) auto
     grid-template-rows repeat(3, 1fr)
-    // grid-gap 5px
-    text-align center
-    padding  0 10px 10px
-    transform translateY(-24px)
-    clip-path inset(12px 0 0 0)
-  
-  &__inputs-wrapper
-    background lighten($color, 25%)
+    padding 0 $keypadPadding $keypadPadding
+    position relative
+    transform translateY(-($keyHeight))
 
-  &__actions
-    display grid
-    grid-template-columns repeat(2, 1fr)
-    grid-template-rows repeat(2, 1fr)
-    grid-column 5
-    padding-left 10px
-    grid-row 2 / -1
+    &-wrap
+      background lighten($color, 25%)
 
-  &__receipt-feed
+    &-actions
+      display grid
+      grid-column 5
+      grid-row 2 / -1
+      grid-template-columns repeat(2, 1fr)
+      grid-template-rows repeat(2, 1fr)
+      padding-left $keypadPadding
+
+    &-spacer
+      grid-column 5
+      grid-row 1
+
+  &__mid
     height 40px
     background lighten($color, 5%)
     position relative
 
-    &:before
-      content ''
-      background darken($color, 75%)
-      position absolute
-      height 10px
-      width 70px
-      top 5px
-      left 10px
+  &__receipt-feed
+    background darken($color, 75%)
+    content ''
+    height 10px
+    left 10px
+    position absolute
+    top 5px
+    width 70px
 
-    &:after
-      content ''
-      background lighten($color, 100%)
-      border-radius 100%
-      height 20px
-      width 20px
-      position absolute
-      right 30px
-      top 10px
-
-    .receipt
-      width 50px
-      height 80px
-      background white
-      transform translateY(-100%)
-      position absolute
-      left 20px
-      top 10px
+  &__receipt
+    background white
+    bottom 5px
+    height 80px
+    left 10px
+    position absolute
+    width 50px
 
   &__drawer
     background darken($color, 25%)
@@ -112,37 +146,24 @@ body
     position relative
     transform translateY(-16px)
 
+    // handle
     &:before
+      background lighten($color, 50%)
+      border-radius 0
       content ''
       height 5px
-      width 40px
-      border-radius 0
-      background lighten($color, 50%)
-      position absolute
       left 50%
+      position absolute
       top 50%
       transform translate(-50%, -50%)
+      width 40px
 
+    // outline
     &:after
-      content ''
-      position absolute
-      top 5px
-      left 5px
-      right 5px
-      bottom 5px
       border 4px solid darken($color, 50%)
-
-button
-  cursor pointer
-  height 24px
-  width 30px
-  box-shadow 0 5px 0 black
-  transform translateY(0)
-  
-  &:active
-    transform translateY(5px)
-    box-shadow 0 0 0 black
-  
-.spacer
-  grid-column 5
-  grid-row 1
+      bottom 5px
+      content ''
+      left 5px
+      position absolute
+      right 5px
+      top 5px
